@@ -12,7 +12,11 @@ ver. 0.8.4 (2008/??/??) - stable
 - Merged patches from Debian package. Thanks to Yaroslav
   Halchenko.
 - Use current day and month instead of Jan 1st if both are
-  not available in the log. Thanks to Andreas Itzchak Rehberg
+  not available in the log. Thanks to Andreas Itzchak
+  Rehberg.
+- Try to match the regex even if the line does not contain a
+  valid date/time. Described in Debian #491253. Thanks to
+  Yaroslav Halchenko.
 
 ver. 0.8.3 (2008/07/17) - stable
 ----------
